crates/huak_cli/tests/snapshots/r#mod__tests__activate_help.snap
---
source: crates/huak_cli/tests/mod.rs
info:
  program: huak
  args:
    - activate
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Activate the virtual environment

Usage: huak activate [OPTIONS]

Options:
  -q, --quiet     
      --no-color  
  -h, --help      Print help

----- stderr -----

