crates/huak_cli/tests/snapshots/r#mod__tests__test_help.snap
---
source: crates/huak_cli/tests/mod.rs
info:
  program: huak
  args:
    - test
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Test the project's Python code

Usage: huak test [OPTIONS] [-- <TRAILING>...]

Arguments:
  [TRAILING]...  Pass trailing arguments with `--`

Options:
  -q, --quiet     
      --no-color  
  -h, --help      Print help

----- stderr -----

